--- a/TCMSFRONTEND/Views/Assets/less/hispan/style.less
+++ b/TCMSFRONTEND/Views/Assets/less/hispan/style.less
@@ -9,6 +9,7 @@
 @import "components.less";
 @import "datepicker.less";
 @import "responsive.less";
+@import "print.less";
 
 @patternBg: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAEklEQVQImWPQ1NT8z4AOSBMEAMQQBek5754EAAAAAElFTkSuQmCC');
 @PatternLight: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAEUlEQVQImWNgYGCQYkADmAIABaMAT85OrbsAAAAASUVORK5CYII=');
