--- a/TCMSFRONTEND/Views/Modules/Content/full.html
+++ b/TCMSFRONTEND/Views/Modules/Content/full.html
@@ -105,7 +105,7 @@
                     <div class="row print">
                         <div class="col-xs-12">
                             <ul class="list-inline list-unstyled">
-                                <li><a href="#"><i class="icon-print"></i> Print</a></li>
+                                <li><a href="javascript:window.print();"><i class="icon-print"></i> Print</a></li>
                                 <li><a href="#"><i class="icon-envelope"></i> Email</a></li>
                                 <!--<li><a href="#"><i class="icon-code"></i> Embed</a></li>-->
                             </ul>
