--- a/TCMSFRONTEND/Views/Modules/ContentsList/ContentTabs-CallBack.html
+++ b/TCMSFRONTEND/Views/Modules/ContentsList/ContentTabs-CallBack.html
@@ -26,6 +26,6 @@
 </ul>
 {{#each Data}}
     {{#if first}}
-        <a href="{{categoryUrlParent}}" class="more">Ver mas</a>
+        <a href="{{categoryUrlParent}}" class="more">Ver más</a>
     {{/if}}
 {{/each}}
