--- a/TCMSFRONTEND/Views/Modules/ContentsList/TagItems.html
+++ b/TCMSFRONTEND/Views/Modules/ContentsList/TagItems.html
@@ -1,4 +1,4 @@
-{{#if Config.Site_Modules_Title}}
+﻿{{#if Config.Site_Modules_Title}}
 <div class="page-header">
     <h2 class="item-title">{{Config.Site_Modules_Title}}</h2>
 </div>
@@ -27,7 +27,7 @@
         </div>
         <div class="panel-footer">
             <div class="more text-center has-line">
-                <a class="btn black" href="#">Ver Mas</a>
+                <a class="btn black" href="#">Ver más</a>
             </div>
         </div>
     </div>
