--- a/TCMSFRONTEND/Views/Modules/Menu/MenuWithPrograms.html
+++ b/TCMSFRONTEND/Views/Modules/Menu/MenuWithPrograms.html
@@ -16,7 +16,7 @@
                             <li><a href="/category/Asia-y-Oceanía/4">Asia y Oceanía</a></li>
                             <li><a href="/category/África/18">África</a></li>
                             <li><a href="/category/Europa/35">Europa</a></li>
-                            <li><a href="/category/EE.UU.-y-Canadá/44">EE.UU. y Canadá</a></li>
+                            <li><a href="/category/América-del-Norte/44">América del Norte</a></li>
                             <li><a href="/category/Sudamérica/51">Sudamérica</a></li>
                             <li><a href="/category/Centroamérica/103">Centroamérica</a></li>
                         </ul>
