--- a/TCMSFRONTEND/Views/Modules/ContentsList/CategoryItems.html
+++ b/TCMSFRONTEND/Views/Modules/ContentsList/CategoryItems.html
@@ -1,4 +1,4 @@
-<div id="itemlist" class="load-more" data-params='{{Config.Site_Modules_Params}}' data-template="{{Config.Site_Modules_ViewPath}}" data-count="5" data-offset="0" data-tries="0">
+﻿<div id="itemlist" class="load-more" data-params='{{Config.Site_Modules_Params}}' data-template="{{Config.Site_Modules_ViewPath}}" data-count="5" data-offset="0" data-tries="0">
     <div class="panel itemlist thumb thumbs-large">
         <div class="panel-body">
             <ul class="list-unstyled">
@@ -22,7 +22,7 @@
         </div>
         <div class="panel-footer">
             <div class="more text-center has-line">
-                <a class="btn black" href="#">Ver Mas</a>
+                <a class="btn black" href="#">Ver más</a>
             </div>
         </div>
     </div>
