--- a/TCMSFRONTEND/Views/Modules/ContentsList/NewsList.html
+++ b/TCMSFRONTEND/Views/Modules/ContentsList/NewsList.html
@@ -37,7 +37,7 @@
         </div>
         <div class="panel-footer">
             <div class="more text-center has-line">
-                <a class="btn black" href="#">Ver Mas</a>
+                <a class="btn black" href="#">Ver más</a>
             </div>
         </div>
     </div>
