--- a/TCMSFRONTEND/Views/Modules/Static/Copyright.html
+++ b/TCMSFRONTEND/Views/Modules/Static/Copyright.html
@@ -1,3 +1,1 @@
-<div class="inner">&copy; HispanTV 2015. Todos los derechos reservados. Al usar los materiales
-    parcial o completamente, es obligatorio hacer referencia a HispanTV
-</div>
+<div class="inner">&copy; Iran 2015. All rights reserved.</div>
