--- a/TCMSFRONTEND/Views/Pages/index.html
+++ b/TCMSFRONTEND/Views/Pages/index.html
@@ -8,15 +8,15 @@
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{pageConfig.title}}HispanTV, Nexo Latino</title>
+    <title>{{pageConfig.title}}Iran</title>
     <meta content="{{pageConfig.datetime}}" itemprop="datePublished" name="pubdate" property="og:pubdate">
     <meta content="" itemprop="contentLocation">
-    <meta content="HispanTV" itemprop="author" name="author">
+    <meta content="Iran" itemprop="author" name="author">
     <meta content="" itemprop="sourceOrganization" name="source">
-    <meta content="{{#if pageConfig.title}}{{pageConfig.title}} - {{/if}}HispanTV.com" itemprop="headline" property="og:title">
+    <meta content="{{#if pageConfig.title}}{{pageConfig.title}} - {{/if}}iran.com" itemprop="headline" property="og:title">
     <meta content="{{pageConfig.description}}" itemprop="description" name="description" property="og:description">
     <meta content="{{pageConfig.description}}" itemprop="keywords" name="keywords">
-    <meta content="HISPANTV" itemprop="siteName" property="og:site_name">
+    <meta content="Iran" itemprop="siteName" property="og:site_name">
     <meta content="article" itemprop="ogType" property="og:type">
     <meta content="{{pageConfig.image}}" itemprop="thumbnailUrl" name="thumbnailUrl" property="og:image">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
