* Switch to Nustache

--- a/TCMSFRONTEND/Views/Pages/index.html
+++ b/TCMSFRONTEND/Views/Pages/index.html
@@ -58,64 +58,64 @@
             </div>
         </div>
     </header>
-    {{#if showcase}}
+    {{{#if showcase}}}
     <aside id="showcase">
         <div class="wrapper _default">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        {{showcase}}
+                        {{{showcase}}}
                     </div>
                 </div>
             </div>
         </div>
     </aside>
-    {{/if}}
+    {{{/if}}}
     <section id="mainbody">
-        {{#if main}}
+        {{{#if main}}}
         <div class="wrapper _default">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        {{main}}
+                        {{{main}}}
                     </div>
                 </div>
             </div>
         </div>
-        {{/if}}
-        {{#if green}}
+        {{{/if}}}
+        {{{#if green}}}
         <div class="wrapper _green">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        {{green}}
+                        {{{green}}}
                     </div>
                 </div>
             </div>
         </div>
-        {{/if}}
-        {{#if gray}}
+        {{{/if}}}
+        {{{#if gray}}}
         <div class="wrapper _gray">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        {{gray}}
+                        {{{gray}}}
                     </div>
                 </div>
             </div>
         </div>
-        {{/if}}
-        {{#if lightgray}}
+        {{{/if}}}
+        {{{#if lightgray}}}
         <div class="wrapper _lightgray">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        {{lightgray}}
+                        {{{lightgray}}}
                     </div>
                 </div>
             </div>
         </div>
-        {{/if}}
+        {{{/if}}}
     </section>
     <footer id="footer">
         <div class="wrapper">
@@ -152,13 +152,13 @@
                         </ul>
                     </div>
                 </div>
-                {{#if copyright}}
+                {{{#if copyright}}}
                 <div class="row copyright">
                     <div class="col-xs-12">
-                        {{copyright}}
+                        {{{copyright}}}
                     </div>
                 </div>
-                {{/if}}
+                {{{/if}}}
             </div>
         </div>
     </footer>
