--- a/TCMSFRONTEND/Views/Modules/ContentsList/TilesGalleries.html
+++ b/TCMSFRONTEND/Views/Modules/ContentsList/TilesGalleries.html
@@ -7,20 +7,32 @@
     </header>
     {{/if}}
     <section class="panel-body">
-        <ul class="items row">
-            {{#each Data}}
+        <ul class="items row">     
+            {{#if_first Data}}
             <li class="col-xs-12 col-sm-4 col-md-3">
                 <figure class="img">
                     <a href="{{url}}"><img src="{{image}}" alt="{{Title}}" /></a>
                     <figcaption>
                         <a href="{{url}}">
-                            <span class="title">{{ShortTitle}}</span>
+                            <span class="title">1111111:{{ShortTitle}}</span>
                             <span class="desc">{{Introtext}}</span>
                         </a>
                     </figcaption>
                 </figure>
             </li>
-            {{/each}}
+            {{else}}           
+            <li class="col-xs-12 col-sm-4 col-md-3">
+                <figure class="img">
+                    <a href="{{url}}"><img src="{{image}}" alt="{{Title}}" /></a>
+                    <figcaption>
+                        <a href="{{url}}">
+                            <span class="title">2222:{{ShortTitle}}</span>
+                            <span class="desc">{{Introtext}}</span>
+                        </a>
+                    </figcaption>
+                </figure>
+            </li>
+           {{/if_first Data}}
         </ul>
     </section>
 </div>
