--- a/TCMSFRONTEND/Views/Pages/index.html
+++ b/TCMSFRONTEND/Views/Pages/index.html
@@ -51,6 +51,7 @@
                             <ul class="list-unstyled list-inline">
                                 <li class="user" title="Login / Register"><a href="#" tabindex="0" data-toggle="modal" data-target="#user-form"><i class="icon-user"></i> Login</a></li>
                                 <li class="search" title="Search"><a href="#" tabindex="0" data-toggle="popover" data-placement="bottom"><i class="icon-search"></i></a></li>
+                                <li class="menu" title="Toggle Menu"><a href="#" id="menu-toggle" class="hidden-md hidden-lg"><i class="icon-menu"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -121,7 +122,7 @@
         <div class="wrapper">
             <div class="container">
                 <div class="row footer-menu">
-                    <div class="col-xs-12 col-sm-3 col-md-2">
+                    <div class="col-xs-5 col-sm-3 col-md-2">
                         <ul>
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Categories</a></li>
@@ -131,7 +132,7 @@
                             <li><a href="#">Witness</a></li>
                         </ul>
                     </div>
-                    <div class="col-xs-12 col-sm-3 col-md-2">
+                    <div class="col-xs-5 col-sm-3 col-md-2">
                         <ul>
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Categories</a></li>
@@ -141,7 +142,7 @@
                             <li><a href="#">Witness</a></li>
                         </ul>
                     </div>
-                    <div class="col-xs-12 col-sm-3 col-md-2">
+                    <div class="hidden-xs col-sm-3 col-md-2">
                         <ul>
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Categories</a></li>
