--- a/TCMSFRONTEND/Views/Modules/Content/full.html
+++ b/TCMSFRONTEND/Views/Modules/Content/full.html
@@ -1,3 +1,92 @@
+<article id="item">
+    <div class="wrapper _default">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-8">
+                    <div class="panel item">
+                        <section class="panel-body">
+                            <div class="item-media">
+                                {{#each Data.Images}}
+                                <figure>
+                                    <img alt="{{description}}" src="{{imagePath}}">
+                                    <figcaption>{{description}}</figcaption>
+                                </figure>
+                                {{/each}}
+                            </div>
+                            <div class="item-desc">
+                                <h2 class="item-title">{{Data.Title}}</h2>
+                                <div class="item-text">
+                                    <div class="introtext">
+                                        <p>{{Data.Introtext}}</p>
+                                    </div>
+                                    <p class="introtext">{{Data.Introtext}}</p>
+                                    <div class="fulltext">{{Data.Fulltext}}</div>
+                                </div>
+                            </div>
+                            <div class="item-sharing">
+                                <div class="inner">
+                                    <h4>Share</h4>
+                                    <ul class="list-unstyled list-inline">
+                                        <li class="fb"><a href="https://www.facebook.com/sharer/sharer.php?u=http://iran.presstv.ir{{Data.url}}"><i class="icon-facebook"></i></a></li>
+                                        <li class="tw"><a href="https://twitter.com/home?status=http://iran.presstv.ir{{Data.url}}"><i class="icon-twitter"></i></a></li>
+                                        <li class="gp"><a href="https://plus.google.com/share?url=http://iran.presstv.ir{{Data.url}}"><i class="icon-gplus"></i></a></li>
+                                        <li class="em"><a href="#"><i class="icon-email"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="item-comments">
+                                <div class="inner">
+                                    <div id="hypercomments_widget"></div>
+                                    <script type="text/javascript">
+                                        _hcwp = window._hcwp || [];
+                                        _hcwp.push({ widget: "Stream", widget_id: 26167,xid: "c" + {{Data.Id}} ,hc_disable:1,quote_disable:1,social:"google, facebook, twitter, openid",comments_level:2});
+                                        (function () {
+                                            if ("HC_LOAD_INIT" in window) return;
+                                            HC_LOAD_INIT = true;
+                                            var lang = "es";
+                                            var hcc = document.createElement("script"); hcc.type = "text/javascript"; hcc.async = true;
+                                            hcc.src = ("https:" == document.location.protocol ? "https" : "http") + "://w.hypercomments.com/widget/hc/26167/" + lang + "/widget.js";
+                                            var s = document.getElementsByTagName("script")[0];
+                                            s.parentNode.insertBefore(hcc, s.nextSibling);
+                                        })();
+                                    </script>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+                <div id="sidebar" class="col-xs-12 col-md-4">
+                    {{#if Data.relatedByCategory}}
+                    <div class="panel itemlist">
+                        <header class="panel-title">
+                            <h2>Related Items</h2>
+                        </header>
+                        <div class="panel-body">
+                            <ul class="items">
+                                {{#each Data.relatedByCategory}}
+                                <li>
+                                    <figure class="img">
+                                        <a href="{{url}}"><img src="{{image}}" alt="{{Title}}" /></a>
+                                        <figcaption>
+                                            <a href="{{url}}">
+                                                <span class="title">{{Title}}</span>
+                                                <span class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                                            </a>
+                                        </figcaption>
+                                    </figure>
+                                </li>
+                                {{/each}}
+                            </ul>
+                        </div>
+                    </div>
+                    {{/if}}
+                </div>
+            </div>
+        </div>
+    </div>
+</article>
+
+
 <div id="item" class="item">
     <div class="page-header">
         <h3>
