item page bugfix

--- a/TCMSFRONTEND/Views/Modules/Content/full.html
+++ b/TCMSFRONTEND/Views/Modules/Content/full.html
@@ -20,7 +20,7 @@
                                         <p>{{Data.Introtext}}</p>
                                     </div>
                                     <p class="introtext">{{Data.Introtext}}</p>
-                                    <div class="fulltext">{{Data.Fulltext}}</div>
+                                    <div class="fulltext">{{{Data.Fulltext}}}</div>
                                 </div>
                             </div>
                             <div class="item-sharing">
