--- a/TCMSFRONTEND/Views/Modules/Content/full.html
+++ b/TCMSFRONTEND/Views/Modules/Content/full.html
@@ -39,13 +39,13 @@
                                     <div id="hypercomments_widget"></div>
                                     <script type="text/javascript">
                                         _hcwp = window._hcwp || [];
-                                        _hcwp.push({ widget: "Stream", widget_id: 26167,xid: "c" + {{Data.Id}} ,hc_disable:1,quote_disable:1,social:"google, facebook, twitter, openid",comments_level:2});
+                                        _hcwp.push({ widget: "Stream", widget_id: 29636,xid: "c" + {{Data.Id}} ,hc_disable:1,quote_disable:1,social:"google, facebook, twitter, openid",comments_level:2});
                                         (function () {
                                             if ("HC_LOAD_INIT" in window) return;
                                             HC_LOAD_INIT = true;
-                                            var lang = "es";
+                                            var lang = "en";
                                             var hcc = document.createElement("script"); hcc.type = "text/javascript"; hcc.async = true;
-                                            hcc.src = ("https:" == document.location.protocol ? "https" : "http") + "://w.hypercomments.com/widget/hc/26167/" + lang + "/widget.js";
+                                            hcc.src = ("https:" == document.location.protocol ? "https" : "http") + "://w.hypercomments.com/widget/hc/29636/" + lang + "/widget.js";
                                             var s = document.getElementsByTagName("script")[0];
                                             s.parentNode.insertBefore(hcc, s.nextSibling);
                                         })();
