Menu module added

--- a/TCMSFRONTEND/Views/Modules/Menu/Menu.html
+++ b/TCMSFRONTEND/Views/Modules/Menu/Menu.html
@@ -1,51 +1,24 @@
-﻿<nav id="menu" class="pull-right hidden-xs">
+﻿<nav id="menu">
     <ul class="list-unstyled list-inline">
-        <li><a href="/">Inicio</a></li>
-        <li class="haschild">
-            <a href="/noticias">Noticias</a>
+        <li class="active"><a href="/">Home</a></li>
+        <li>
+            <a href="#">Programs</a>
             <div class="child">
-                <div class="row">
-                    <div class="col-md-5">
-                        <ul class="list-unstyled">
-                            <li><a href="/category/Irán/1">Irán</a></li>
-                            <li><a href="/category/Oriente-Medio/26">Oriente Medio</a></li>
-                            <li><a href="/category/Asia-y-Oceanía/4">Asia y Oceanía</a></li>
-                            <li><a href="/category/África/18">África</a></li>                          
-                            <li><a href="/category/Europa/35">Europa</a></li>
-                            <li><a href="/category/EE.UU.-y-Canadá/44">EE.UU. y Canadá</a></li>
-                            <li><a href="/category/Sudamérica/51">Sudamérica</a></li>
-                            <li><a href="/category/Centroamérica/103">Centroamérica</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-5 col-md-offset-2">
-                        <ul class="list-unstyled">
-                            <li><a href="/category/Sociedad/82">Sociedad</a></li>
-                            <li><a href="/category/Economía/80">Economía</a></li>
-                            <li><a href="/category/Ciencia-Tecnología/86">Ciencia/Tec</a></li>
-                            <li><a href="/category/Deporte/90">Deporte</a></li>
-                            <li><a href="/category/Salud/88">Salud</a></li>
-                            <li><a href="/category/Cultura/84">Cultura</a></li>
-                        </ul>
-                    </div>
-                </div>
+                <ul class="list-unstyled">
+                    <li><a href="#">Destinations</a></li>
+                    <li><a href="#">Events</a></li>
+                    <li><a href="#">History &amp; Culture</a></li>
+                    <li><a href="#">Science &amp; Technology</a></li>
+                    <li><a href="#">Religion</a></li>
+                    <li><a href="#">Cuisine</a></li>
+                    <li><a href="#">Handicrafts</a></li>
+                    <li><a href="#">Sports</a></li>
+                </ul>
             </div>
         </li>
-        <li><a href="/programas">programas</a></li>
-        <li class=""><a href="/documentales">Documentales</a></li>
-        <li><a href="/reportajes">Reportajes</a></li>
-        <li class=""><a href="/peliculas">PELÍCULAS</a></li>
-        <li class=""><a href="/series">Series</a></li>
-        <li class=""><a href="/fotos">Fotos</a></li>
-        <li class="search">
-            <a href="#"><i class="icon-search"></i></a>
-            <div class="search-form" style="width: 0;">
-                <form action="/search" method="get">
-                    <div class="form-group">
-                        <input type="text" name="q" class="form-control bg_grey" placeholder="Search..." />
-                        <button type="submit"><i class="icon-search"></i></button>
-                    </div>
-                </form>
-            </div>
-        </li>
+        <li><a href="#">Travelog</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Iran 360</a></li>
+        <li><a href="#">Witness</a></li>
     </ul>
 </nav>
