less files updated

--- a/TCMSFRONTEND/Views/Assets/less/project/components.less
+++ b/TCMSFRONTEND/Views/Assets/less/project/components.less
@@ -1,3 +1,8 @@
+/* Pagination */
+.pagination > li:first-child > a, .pagination > li:first-child > span { border-radius: 0; }
+.pagination > li:last-child > a, .pagination > li:last-child > span { border-radius: 0; }
+.pagination > li > a, .pagination > li > span { color: @green; }
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus { background: @green; border-color: @green; }
 /* Tooltip */
 .tooltip {
     strong { display: block; }
