--- a/TCMSFRONTEND/Views/Assets/less/project/icons.less
+++ b/TCMSFRONTEND/Views/Assets/less/project/icons.less
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'iran';
-    src: url('../font/iran.eot?58249558');
-    src: url('../font/iran.eot?58249558#iefix') format('embedded-opentype'),
-	url('../font/iran.woff?58249558') format('woff'),
-	url('../font/iran.ttf?58249558') format('truetype'),
-	url('../font/iran.svg?58249558#iran') format('svg');
+    src: url('../font/iran.eot?57815555');
+    src: url('../font/iran.eot?57815555#iefix') format('embedded-opentype'),
+	url('../font/iran.woff?57815555') format('woff'),
+	url('../font/iran.ttf?57815555') format('truetype'),
+	url('../font/iran.svg?57815555#iran') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'iran';
-    src: url('../font/iran.svg?58249558#iran') format('svg');
+    src: url('../font/iran.svg?57815555#iran') format('svg');
   }
 }
 */
@@ -72,3 +72,17 @@
 .icon-users:before { content: '\e80f'; } /* '' */
 .icon-register:before { content: '\e810'; } /* '' */
 .icon-play:before { content: '\e811'; } /* '' */
+.icon-rss:before { content: '\e812'; } /* '' */
+.icon-facebook:before { content: '\e813'; } /* '' */
+.icon-call:before { content: '\e814'; } /* '' */
+.icon-twitter:before { content: '\e815'; } /* '' */
+.icon-linkedin:before { content: '\e816'; } /* '' */
+.icon-instagram-filled:before { content: '\e817'; } /* '' */
+.icon-instagram:before { content: '\e818'; } /* '' */
+.icon-tumblr:before { content: '\e819'; } /* '' */
+.icon-vimeo:before { content: '\e81a'; } /* '' */
+.icon-soundcloud:before { content: '\e81b'; } /* '' */
+.icon-email:before { content: '\e81c'; } /* '' */
+.icon-youtube:before { content: '\e81d'; } /* '' */
+.icon-gplus:before { content: '\e81e'; } /* '' */
+.icon-code:before { content: '\e81f'; } /* '' */
