--- a/TCMSFRONTEND/Views/Assets/less/project/panels.less
+++ b/TCMSFRONTEND/Views/Assets/less/project/panels.less
@@ -22,7 +22,7 @@
 	ul {
 	    margin-bottom: 0; list-style: none; padding: 0;
 	    li {
-		margin-bottom: @grid-gutter-width; max-height: 295px; overflow: hidden;
+		margin-bottom: @grid-gutter-width; max-height: 292px; overflow: hidden;
 		figure {
 		    border: 3px solid @green;
 		    & > a, & > img {
@@ -148,6 +148,62 @@
 		    a { color: @green; }
 		}
 		p { font-size: 13px; }
+	    }
+	}
+    }
+    &.itemlist {
+	ul {
+	    li {
+		height: 79px; overflow: hidden; margin-bottom: (@grid-gutter-width / 2);
+		figure {
+		    &.video {
+			& > a, & > img {
+			    position: relative;
+			    &:after { display: block; content: '\e811'; position: absolute; bottom: 0; right: 0; width: 30px; height: 30px; background: rgba(0, 0, 0, 0.8); line-height: 30px; text-align: center; color: @white; font-family: "iran"; opacity: 0.7; }
+			}
+		    }
+		    & > a, & > img { display: block; width: 140px; float: left; }
+		    & > a {
+			& > img { display: block; }
+		    }
+		    figcaption {
+			display: block; margin-left: (140 + (@grid-gutter-width / 3));
+			& > a {
+			    display: block; font-size: 16px;
+			    span {
+				display: block;
+				&.desc { font-size: 14px; color: lighten(@text-color, 40%); }
+			    }
+			}
+		    }
+		}
+	    }
+	}
+	&.page {
+	    ul {
+		padding: 0; margin: 0;
+		li {
+		    height: 113px; background: @grayLight; padding: 0; transition: all 0.25s;
+		    &:hover { box-shadow: 0 0 3px @gray; background: lighten(@grayLight, 3%); }
+		    figure {
+			height: 100%;
+			& > a, & > img { width: 200px; }
+			figcaption {
+			    margin-left: (200 + (@grid-gutter-width / 2)); position: relative; height: 100%;
+			    & > a {
+				height: 100%; padding-top: 6px; position: absolute; width: 100%; left: 0; top: 0;
+				&:hover { text-decoration: none; }
+				span {
+				    &.title { font-size: 20px; color: @green; margin-bottom: 4px; }
+				    &.desc { color: lighten(@text-color, 20%); }
+				}
+				&:hover {
+				    span.title { color: darken(@green, 5%); }
+				}
+			    }
+			}
+		    }
+		}
 	    }
 	}
     }
