--- a/TCMSFRONTEND/Views/Modules/Menu/Menu.html
+++ b/TCMSFRONTEND/Views/Modules/Menu/Menu.html
@@ -16,7 +16,7 @@
                 </ul>
             </div>
         </li>
-        <li><a href="#">Travelog</a></li>
+        <!--<li><a href="#">Travelog</a></li>-->
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Iran 360</a></li>
         <li><a href="#">Witness</a></li>
