--- a/TCMSFRONTEND/Views/Modules/Content/full.html
+++ b/TCMSFRONTEND/Views/Modules/Content/full.html
@@ -27,9 +27,9 @@
                                 <div class="inner">
                                     <h4>Share</h4>
                                     <ul class="list-unstyled list-inline">
-                                        <li class="fb"><a taget="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://iran.presstv.ir{{Data.url}}"><i class="icon-facebook"></i></a></li>
-                                        <li class="tw"><a taget="_blank" href="https://twitter.com/home?status=http://iran.presstv.ir{{Data.url}}"><i class="icon-twitter"></i></a></li>
-                                        <li class="gp"><a taget="_blank" href="https://plus.google.com/share?url=http://iran.presstv.ir{{Data.url}}"><i class="icon-gplus"></i></a></li>
+                                        <li class="fb"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://iran.presstv.ir{{Data.url}}"><i class="icon-facebook"></i></a></li>
+                                        <li class="tw"><a target="_blank" href="https://twitter.com/home?status=http://iran.presstv.ir{{Data.url}}"><i class="icon-twitter"></i></a></li>
+                                        <li class="gp"><a target="_blank" href="https://plus.google.com/share?url=http://iran.presstv.ir{{Data.url}}"><i class="icon-gplus"></i></a></li>
                                         <li class="em"><a href="#"><i class="icon-email"></i></a></li>
                                     </ul>
                                 </div>
