--- a/TCMSFRONTEND/Views/Modules/Menu/Menu.html
+++ b/TCMSFRONTEND/Views/Modules/Menu/Menu.html
@@ -5,20 +5,21 @@
             <a href="#">Programs</a>
             <div class="child">
                 <ul class="list-unstyled">
-                    <li><a href="#">Destinations</a></li>
-                    <li><a href="#">Events</a></li>
-                    <li><a href="#">History &amp; Culture</a></li>
-                    <li><a href="#">Science &amp; Technology</a></li>
-                    <li><a href="#">Religion</a></li>
-                    <li><a href="#">Cuisine</a></li>
-                    <li><a href="#">Handicrafts</a></li>
-                    <li><a href="#">Sports</a></li>
+                    <li><a href="/category/Art/153">Art</a></li>
+                    <li><a href="/category/Destinations/2">Destinations</a></li>
+                    <li><a href="/category/Events/9">Events</a></li>
+                    <li><a href="/category/History-Culture/3">History &amp; Culture</a></li>
+                    <li><a href="/category/Science/10">Science &amp; Technology</a></li>
+                    <li><a href="/category/Religion/7">Religion</a></li>
+                    <li><a href="/category/Cuisine/11">Cuisine</a></li>
+                    <li><a href="/category/Handicrafts/8">Handicrafts</a></li>
+                    <li><a href="/category/Sports/12">Sports</a></li>
                 </ul>
             </div>
         </li>
         <!--<li><a href="#">Travelog</a></li>-->
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Iran 360</a></li>
-        <li><a href="#">Witness</a></li>
+        <!--<li><a href="#">Witness</a></li>-->
     </ul>
 </nav>
