--- a/TCMSFRONTEND/Views/Pages/index.html
+++ b/TCMSFRONTEND/Views/Pages/index.html
@@ -42,7 +42,7 @@
                         {{/if}}
                         <div class="header-tools pull-right">
                             <ul class="list-unstyled list-inline">
-                                <li class="user" title="Login / Register"><a href="#" tabindex="0" data-toggle="modal" data-target="#user-form"><i class="icon-user"></i> Login</a></li>
+                                <!--<li class="user" title="Login / Register"><a href="#" tabindex="0" data-toggle="modal" data-target="#user-form"><i class="icon-user"></i> Login</a></li>-->
                                 <li class="search" title="Search"><a href="#" tabindex="0" data-toggle="popover" data-placement="bottom"><i class="icon-search"></i></a></li>
                                 <li class="menu" title="Toggle Menu"><a href="#" id="menu-toggle" class="hidden-md hidden-lg"><i class="icon-menu"></i></a></li>
                             </ul>
@@ -121,14 +121,14 @@
                     <div class="col-xs-5 col-sm-3 col-md-2">
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li><a href="#">Categories</a></li>
-                            <li><a href="#">Travelog</a></li>
+                            <!--<li><a href="#">Categories</a></li>
+                            <li><a href="#">Travelog</a></li>-->
                             <li><a href="#">Gallery</a></li>
                             <li><a href="#">Iran 360</a></li>
-                            <li><a href="#">Witness</a></li>
+                            <!--<li><a href="#">Witness</a></li>-->
                         </ul>
                     </div>
-                    <div class="col-xs-5 col-sm-3 col-md-2">
+                    <!--<div class="col-xs-5 col-sm-3 col-md-2">
                         <ul>
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Categories</a></li>
@@ -147,7 +147,7 @@
                             <li><a href="#">Iran 360</a></li>
                             <li><a href="#">Witness</a></li>
                         </ul>
-                    </div>
+                    </div>-->
                 </div>
                 {{#if copyright}}
                 <div class="row copyright">
