* hidden slider desc on xs

--- a/TCMSFRONTEND/Views/Modules/ContentsList/Topnews.html
+++ b/TCMSFRONTEND/Views/Modules/ContentsList/Topnews.html
@@ -9,7 +9,7 @@
                         <h3>
                             <a href="{{url}}">
                                 <span class="title">{{ShortTitle}}</span>
-                                <span class="desc">{{Introtext}}</span>
+                                <span class="desc hidden-sm hidden-xs">{{Introtext}}</span>
                             </a>
                         </h3>
                     </figcaption>
