--- a/TCMSFRONTEND/Views/Pages/index.html
+++ b/TCMSFRONTEND/Views/Pages/index.html
@@ -53,7 +53,7 @@
         </div>
     </header>
     {{#if item}}
-        {{{item}}}
+    {{{item}}}
     {{/if}}
     {{#if showcase}}
     <aside id="showcase">
@@ -224,5 +224,18 @@
     <script src="/Views/Assets/js/bootstrap.min.js"></script>
     <script src="/Views/Assets/js/owl.carousel.min.js"></script>
     <script src="/Views/Assets/js/iran.min.js"></script>
+    <script type="text/javascript">
+        var _paq = _paq || [];
+        _paq.push(['trackPageView']);
+        _paq.push(['enableLinkTracking']);
+        (function () {
+            var u = "//93.190.24.114/";
+            _paq.push(['setTrackerUrl', u + 'piwik.php']);
+            _paq.push(['setSiteId', 4]);
+            var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+            g.type = 'text/javascript'; g.async = true; g.defer = true; g.src = u + 'piwik.js'; s.parentNode.insertBefore(g, s);
+        })();
+    </script>
+    <noscript><p><img src="//93.190.24.114/piwik.php?idsite=4" style="border:0;" alt="" /></p></noscript>
 </body>
 </html>
