--- a/TCMSFRONTEND/Views/Modules/Menu/Menu.html
+++ b/TCMSFRONTEND/Views/Modules/Menu/Menu.html
@@ -6,14 +6,18 @@
             <div class="child">
                 <ul class="list-unstyled">
                     <li><a href="/category/Art/153">Art</a></li>
+                    <li><a href="/category/Cuisine/11">Cuisine</a></li>
                     <li><a href="/category/Destinations/2">Destinations</a></li>
                     <li><a href="/category/Events/9">Events</a></li>
-                    <li><a href="/category/History-Culture/3">History &amp; Culture</a></li>
-                    <li><a href="/category/Science/10">Science &amp; Technology</a></li>
-                    <li><a href="/category/Religion/7">Religion</a></li>
-                    <li><a href="/category/Cuisine/11">Cuisine</a></li>
                     <li><a href="/category/Handicrafts/8">Handicrafts</a></li>
+                    <li><a href="/category/Health/156">Health</a></li>
+                    <li><a href="/category/History-Culture/3">History &amp; Culture</a></li>
+                    <li><a href="/category/Nature/155">Nature</a></li>
+                    <li><a href="/category/Religion/7">Religion</a></li>
+                    <li><a href="/category/Science/10">Science &amp; Technology</a></li>
                     <li><a href="/category/Sports/12">Sports</a></li>
+                    <li><a href="/category/Talents/157">Talents</a></li>
+                    <li><a href="/category/Tehran/154">Tehran</a></li>
                 </ul>
             </div>
         </li>
