--- a/TCMSFRONTEND/Views/Modules/Menu/Menu.html
+++ b/TCMSFRONTEND/Views/Modules/Menu/Menu.html
@@ -22,7 +22,7 @@
             </div>
         </li>
         <!--<li><a href="#">Travelog</a></li>-->
-        <li><a href="#">Gallery</a></li>
+        <li><a href="/category/Gallery/125">Gallery</a></li>
         <li><a href="#">Iran 360</a></li>
         <!--<li><a href="#">Witness</a></li>-->
     </ul>
