--- a/TCMSFRONTEND/Views/Assets/less/project/panels.less
+++ b/TCMSFRONTEND/Views/Assets/less/project/panels.less
@@ -29,7 +29,7 @@
 			display: block; min-height: 50px;
 		    }
 		    figcaption {
-			text-align: center; background: @white; max-height: 145px;
+			text-align: center; background: @white; max-height: 100px; overflow: hidden;
 			& > a {
 			    color: @green; padding: 6px 0; display: block;
 			    &:hover, &:focus, &:active {
